<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="8dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="8dp" >

    <!-- 大布局：水平 -->

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!-- 大布局下的左边布局:垂直 -->

        <LinearLayout
            android:id="@+id/left_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <!-- 导航界面 -->

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.47" >

                <com.unistrong.uniteqlauncher.ui.MyView
                    android:id="@+id/navigation"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/naa"
                    android:clickable="true"
                    android:scaleType="fitXY" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <!-- bt and fm -->

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" >

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.05" >

                        <ImageButton
                            android:id="@+id/bt"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/bt_content"
                            android:scaleType="fitXY"
                            android:src="@drawable/ubt" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1" >

                        <ImageButton
                            android:id="@+id/fm"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/fm_content"
                            android:scaleType="fitXY"
                            android:src="@drawable/fmt" />
                    </RelativeLayout>
                </LinearLayout>

                <!-- photo and video -->

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1" >

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.05" >

                        <ImageButton
                            android:id="@+id/photo"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/photo_content"
                            android:scaleType="fitXY"
                            android:src="@drawable/uphoto" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1" >

                        <ImageButton
                            android:id="@+id/video"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_toRightOf="@+id/photo"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/video_content"
                            android:scaleType="fitXY"
                            android:src="@drawable/uvideo" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- 右边LiearLayout：垂直 -->

        <LinearLayout
            android:id="@+id/right_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="8dp"
            android:layout_weight="1.35"
            android:orientation="vertical" >

            <!-- date and time -->

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.13" >

                <com.unistrong.uniteqlauncher.ui.DateView
                    android:id="@+id/date_time"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/date_bg"
                    android:contentDescription="@string/data_time_content" />
            </RelativeLayout>

            <!-- music -->
            
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.32" >

                <include
                    android:id="@+id/musicview"
                    layout="@layout/musicview" />
            </RelativeLayout>

            <!-- browser and settings -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="8dp"
                android:layout_weight="1.35" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" >

                    <ImageButton
                        android:id="@+id/internet"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/hello_world"
                        android:scaleType="fitXY"
                        android:src="@drawable/uinternet" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1" >

                    <ImageButton
                        android:id="@+id/setting"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/hello_world"
                        android:scaleType="fitXY"
                        android:src="@drawable/usettings" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>